@@ -1,0 +1,22 @@
+<?xml version="1.0" encoding="utf-8"?>
+<Product xmlns='http://code.google.com/p/open-zwave/'>
+<!-- Swiidinter (Z-Wave Cord Switch) -->
+    <!-- Configuration -->
+    <CommandClass id="112">
+        <Value type="list" genre="config" instance="1" index="1" label="Switch All" min="0" max="255" value="255" size="1">
+            <Help>Activate/Deactive ALL ON/OFF</Help>
+            <Item label="Disabled" value="0" />
+            <Item label="Switch off only" value="1" />
+            <Item label="Switch on only" value="2" />
+            <Item label="Fully enabled (Default)" value="255" />
+        </Value>
+    </CommandClass>
+    <!-- Association Groups -->
+    <CommandClass id="133">
+        <Associations num_groups="2">
+            <Group index="1" max_associations="5" label="Long press" auto="true"/>
+            <Group index="2" max_associations="5" label="Short press" auto="true" />
+        </Associations>
+    </CommandClass>
+</Product>
+
