@@ -2437,13 +2437,10 @@ void CEventSystem::SendEventNotification(const std::string &Subject, const std::
 
 void CEventSystem::OpenURL(const std::string &URL)
 {
-	std::string ampURL = stdreplace(URL, "~amp~", "&");
-	ampURL = stdreplace(ampURL, "~comma~", ",");
-	ampURL = stdreplace(ampURL, "~perc~", "%");
-	//_log.Log(LOG_STATUS,"Fetching url: %s",ampURL.c_str());
+	//_log.Log(LOG_STATUS,"Fetching url: %s",URL.c_str());
 	_log.Log(LOG_STATUS, "Fetching url...");
 	_tTaskItem tItem;
-	tItem = _tTaskItem::GetHTTPPage(1, ampURL, "OpenURL");
+	tItem = _tTaskItem::GetHTTPPage(1, URL, "OpenURL");
 	m_sql.AddTaskItem(tItem);
 	// maybe do something with sResult in the future.
 }
